--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					
 							<div class="col-md-10 text-right">
 								<ul class="menu">
-									<li><a class="inner-link" href="#top" target="default">Home</a></li><li><a href="Programm.pdf" target="_blank">Programm</a></li><li><a class="inner-link" href="#workshops" target="default">Workshops</a></li><li><a href="http://ots15.eventbrite.com" target="default">Ticket</a></li><li><a class="inner-link" href="#speakers" target="default">Speaker</a></li><li><a class="inner-link" href="#ort" target="default">Ort</a></li><li><a class="inner-link" href="#lpi" target="default">Linux</a></li><li><a class="inner-link" href="#sponsors" target="default">Partner</a></li><li><a class="inner-link" href="#press" target="default">PressE</a></li>
+									<li><a class="inner-link" href="#top" target="default">Home</a></li><li><a href="programm.html" target="_blank">Programm</a></li><li><a class="inner-link" href="#workshops" target="default">Workshops</a></li><li><a href="http://ots15.eventbrite.com" target="default">Ticket</a></li><li><a class="inner-link" href="#speakers" target="default">Speaker</a></li><li><a class="inner-link" href="#ort" target="default">Ort</a></li><li><a class="inner-link" href="#lpi" target="default">Linux</a></li><li><a class="inner-link" href="#sponsors" target="default">Partner</a></li><li><a class="inner-link" href="#press" target="default">PressE</a></li>
 									
 									<li><a href="/en.html" target="_self">eN</a></li>
 									<li class="social-link"><a href="https://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a></li>
@@ -1757,7 +1757,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="Programm.pdf" target="_blank">Programm</a><div><br></div></h1><h1 class="text-white">Oder hier die <a href="https://play.google.com/store/apps/details?id=org.opentech" target="default">Android App herunterladen</a></h1>
+								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="programm.html" target="_blank">Programm</a><div><br></div></h1><h1 class="text-white">Oder hier die <a href="https://play.google.com/store/apps/details?id=org.opentech" target="default">Android App herunterladen</a></h1>
 							</div>
 						</div>
 					</div>
