--- a/index.html
+++ b/index.html
@@ -328,6 +328,12 @@
 										<img alt="Open Source Press" src="img/open_source_press.png">
 									</a>
 								</div>
+							</div><div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="http://www.it-administrator.de/magazin/it-administrator/" target="default">
+										<img alt="IT Administrator" src="img/IT-ADMINISTRATOR.jpg">
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
