--- a/en.html
+++ b/en.html
@@ -333,6 +333,12 @@
 								</div>
 							</div><div class="col-md-4 col-sm-6 sponsor-column">
 								<div class="sponsor text-center">
+									<a href="https://github.com/ImmobilienScout24" target="default">
+										<img alt="Immobilien Sout24" src="img/ImmobilienScout24.png">
+									</a>
+								</div>
+							</div><div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
 									<a href="http://chemnitzer.linux-tage.de" target="default">
 										<img alt="Chemnitzer Linuxtage" src="img/clt.png">
 									</a>
