--- a/en.html
+++ b/en.html
@@ -43,7 +43,6 @@
     </head>
 
 
-
 <!doctype html>
 <html lang="en">
     <head>
@@ -238,7 +237,7 @@
 				
 				<div class="container">
 					<div class="row">
-						<a href="http://opentechsummit.net/Programm.pdf" class="block-content" target="default">
+						<a href="programm.html" class="block-content" target="default">
 							<div class="col-md-2 col-sm-4 text-center">
 								<i class="icon pe-7s-right-arrow icon-large"></i>
 							</div>
@@ -251,7 +250,7 @@
 							</div>
 						</a>
 						
-						<a href="https://play.google.com/store/apps/details?id=org.opentech" class="block-content" target="default">
+						<a href="opentechsummit2015.apk" class="block-content" target="default">
 							<div class="col-md-2 col-sm-4 text-center">
 								<i class="icon pe-7s-phone"></i>
 							</div>
