--- a/index.html
+++ b/index.html
@@ -340,6 +340,12 @@
 										<img alt="IT Administrator" src="img/IT-ADMINISTRATOR.jpg">
 									</a>
 								</div>
+							</div><div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="https://voicerepublic.com/users/opentech-summit" target="default">
+										<img alt="Voice Republic" src="img/VoiceRepublic.png">
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -1849,7 +1855,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="programm.html" target="_blank">Programm</a><div><br></div></h1><h1 class="text-white">Oder hier die <a href="https://play.google.com/store/apps/details?id=org.opentech" target="default">Android App herunterladen</a></h1>
+								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="https://voicerepublic.com/users/opentech-summit" target="_blank">Programm</a><div><br></div></h1><h1 class="text-white">Oder hier die <a href="https://play.google.com/store/apps/details?id=org.opentech" target="default">Android App herunterladen</a><div><br></div><h1 class="text-white">Live-<a href="https://voicerepublic.com/users/opentech-summit" target="_blank">Stream mithören</a>&nbsp;<span>oder herunterladen.</span></h1></h1>
 							</div>
 						</div>
 					</div>
