--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					
 							<div class="col-md-10 text-right">
 								<ul class="menu">
-									<li><a class="inner-link" href="#top" target="default">Home</a></li><li><a href="programm.html" target="_blank">Programm</a></li><li><a class="inner-link" href="#workshops" target="default">Workshops</a></li><li><a href="http://ots15.eventbrite.com" target="default">Ticket</a></li><li><a class="inner-link" href="#speakers" target="default">Speaker</a></li><li><a class="inner-link" href="#ort" target="default">Ort</a></li><li><a class="inner-link" href="#sponsors" target="default">Partner</a></li><li><a class="inner-link" href="#press" target="default">PressE</a></li><li><a href="http://speakers.opentechsummit.net/coc" target="default">CoC</a></li>
+									<li><a class="inner-link" href="#top" target="default">Home</a></li><li><a href="programm.html" target="_blank">Programm</a></li><li><a class="inner-link" href="#workshops" target="default">Workshops</a></li><li><a href="http://ots15.eventbrite.com" target="default">Ticket</a></li><li><a class="inner-link" href="#speakers" target="default">Speaker</a></li><li><a class="inner-link" href="#ort" target="default">Ort</a></li><li><a class="inner-link" href="#sponsors" target="default">Partner</a></li><li><a class="inner-link" href="#press" target="default">PressE</a></li>
 									
 									<li><a href="/en.html" target="_self">eN</a></li>
 									<li class="social-link"><a href="https://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a></li>
@@ -2620,7 +2620,7 @@
 								<li><a href="https://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a></li>
 								<li><a href="https://www.facebook.com/OpenTechSummit" target="default"><i class="icon social_facebook"></i></a></li>
 								<li><a href="http://opentechsummit.net" target="default"><i class="icon social_dribbble"></i></a></li>
-								<li><a href="https://www.flickr.com/search/?q=openxlab" target="default"><i class="icon social_instagram"></i></a></li>
+								<li><a href="https://www.flickr.com/photos/opentechsummit/" target="default"><i class="icon social_instagram"></i></a></li>
 								<li><a href="https://plus.google.com/u/0/111141930325574830495" target="default"><i class="icon social_googleplus"></i></a></li>
 							</ul>	
 						</div>
