--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="refresh" content="0; url=https://opentechsummit.de/"/>
+		<meta http-equiv="refresh" content="0; url=https://opentechsummit.eu/"/>
 		<title>OpenTechSummit</title>
 		<meta name="description" content="OpenTechSummit" />
 		<meta name="keywords" content="OpenTechSummit" />
